--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>73546</title>
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
