--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <head>
   <title>73546</title>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    hi {
+      font-family: Ubuntu;
+    }
+  </style>
 </head>
 <body>
   <div id="hi">
