--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <style>
     .hi {
-      font-family: Ubuntu;
       text-align: center;
       font-size: 3em;
+    }
+    body {
+      font-family: Ubuntu;
+    }
+    .explain {
+      text-align: center;
+      font-size: 2em;
     }
   </style>
 </head>
 <body>
   <div class="hi">
-    hello
+    hello <br>
+  </div>
+  <div class="explain">
+    i made this website <br>
+    i show cool things i made on here
   </div>
 </body>
