--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>73546</title>
+  <title>home page v.1.0.0</title>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <style>
     .hi {
