--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>home page v.1.0.0</title>
+  <title>home page v.2</title>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
   <style>
     .hi {
@@ -22,6 +22,7 @@
   </div>
   <div class="explain">
     i made this website <br>
-    i show cool things i made on here
+    i show cool things i made on here <br>
   </div>
+  <button href="/gd/extremes.html">geometry dash extreme demons i beat</button>
 </body>
