--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
     i made this website <br>
     i show cool things i made on here <br>
   </div>
-  <button href="/gd/extremes.html">geometry dash extreme demons i beat</button>
+  <a href="explore.html">explore my website</a>
 </body>
