--- a/gd.html
+++ b/gd.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>explore/gd v.1</title>
+  <title>explore/gd v.2</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <style>
     body {
@@ -13,6 +13,8 @@
 </head>
 <body>
   <h1>/gd/</h1> <br>
+  <h2><a href="/..">/..</a></h2> <br>
+  <h3>go back to /explore</h3> <br>
   <h2><a href="/gd/extremes">extremes</a></h2> <br>
   <h3>list of extreme demons i beat.</h3> <br>
 </body>
