--- a/random.html
+++ b/random.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <head>
-  
+  <link href="https://cinderrblock.pages.dev/style.css" rel="stylesheet">
 </head>
+<body>
+  <div class=""h1explore>/random/</div> <br>
+  <h2><a href="/random/images">images</a></h2> <br>
+  <h3>random images i find funny.</h3>
+</body>
