--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <div class="explain">
     i made this website <br>
     i show cool things i made on here <br>
-  </div>
+  </div> <br>
+  <h3>this website was made on <a href="https://github.com/cinderrblock/mahwebsite">github</a>, and is hosted using <a href="https://pages.dev">cloudflare pages</a></h3>
   <a href="explore.html">explore my website</a>
 </body>
