--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
     i show cool things i made on here <br>
   </div> <br>
   <h3>this website was made on <a href="https://github.com/cinderrblock/mahwebsite">github</a>, and is hosted using <a href="https://pages.dev">cloudflare pages</a></h3>
-  <a href="explore.html">explore my website</a>
+  <a href="explore/explore.html">explore my website</a>
 </body>
