--- a/whypdffilesareeasiertoprintthandocxfiles.html
+++ b/whypdffilesareeasiertoprintthandocxfiles.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<head>
+  <title>why pdf files are easier to print than docx files; a small rant</title>
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
+  <style>
+    .hi {
+      text-align: center;
+      font-size: 3em;
+    }
+    body {
+      font-family: Ubuntu;
+    }
+    .explain {
+      text-align: center;
+      font-size: 2em;
+    }
+  </style>
+</head>
+<body>
+ <h1>here's why pdf files are easier to print than docx files</h1> <br>
+ let's ignore the ctrl+p keybind (the p LITERALLY STANDS FOR PRINT) <br>
+ <h2>there is literally a print button on the right side of the screen (image below)</h2> <br>
+ <img src="/resources/g.png" alt="print button that is circled in red" /> <br>
+ <h2>however, on microsoft docs you have to hit like 10 trevigintillion buttons</h2> <br>
+ (file -> print, like who wants to hit that many buttons to access the print dialog) <br>
+ <h2>also you have to wait an undertermined amount of time based on how good your internet is because everything is hosted server-side and not client-side so every action you do can potentially take 7 quattuortrigintillion eternities to go through</h2> <br>
+ can you tell i don't like the microsoft suite <br>
+ <h1>anyways that's really it. also this whole thing could've been avoided if everyone knew about ctrl+p but hey not everyone knows what letter the word "print" starts with i get it</h1>
+ 
+</body>
