--- a/whypdffilesareeasiertoprintthandocxfiles.html
+++ b/whypdffilesareeasiertoprintthandocxfiles.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head
-  <meta content="just use ctrl+p man it's not that hard" property="og:title" />
-  <meta content="like, you have 2 hands, worst comes to worst use your left to hit control and your right to hit p" property="og:description" />
+  <meta content="just use ctrl+p man it's not that hard!! like, you have 2 hands, worst comes to worst use your left to hit control and your right to hit p" property="og:description" />
   <meta content="https://cinderrblock.pages.dev/whypdffilesareeasiertoprintthandocxfiles" property="og:url" />
   <title>why pdf files are easier to print than docx files; a small rant</title>
   <link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet'>
